--- a/webroot/template/index.html
+++ b/webroot/template/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="utf-8">
     <title>Mixdown</title>
+    <script src="https://kit.fontawesome.com/adc1a3a415.js"></script>
+    <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, minimal-ui">
+
 </head>
 <body>
 <div id="root"></div>
